--- a/docs/alkiln/troubleshooting.mdx
+++ b/docs/alkiln/troubleshooting.mdx
@@ -91,3 +91,19 @@ You can check for incorrect variable or value names in a few different ways.
 
 If you look in a test report and see that ALKiln skipped setting a variable, you probably have a typo. See the [error for a missing variable reference](#variable-not-found)
 
+<!--
+## Not setting variables
+
+`mandatory: True` questions
+ -->
+
+<!--
+ ## Infinite loop {#infinite-loop}
+
+WIP
+
+Same var or vars set over and over again and never stop.
+
+A page that has no invalidation message and yet is unable to move on.
+ -->
+
