--- a/docs/alkiln/automated_testing.mdx
+++ b/docs/alkiln/automated_testing.mdx
@@ -154,7 +154,7 @@ You can wait to write more complex tests till your code is more stable. For exam
 
 ## Story Tables <!-- Moved -->
 
-See our [**new and improved** Story Table section](writing_tests.mdx#story-table)!
+See our [**new and improved** Story Table section](writing_tests.mdx#story-table) for 2-column tables!
 
 **Old**:
 
@@ -279,7 +279,7 @@ One special value you can include is `today`. That will insert the date on which
 
 The last example makes sure that the date is 10 years in the past, ensuring that a minor always stays a minor for that test.
 
-### trigger
+### trigger <!-- Moved -->
 
 `trigger` is an optional value in most cases. It is only mandatory for rows that use [index variables](https://docassemble.org/docs/fields.html#index%20variables), like `i`, `j`, or `k`, or [generic objects](https://docassemble.org/docs/fields.html#generic) (`x`).
 
@@ -331,26 +331,31 @@ In those cases, leave the `trigger` column empty.
 
 _Simple field types with their values._
 
+<!-- Moved -->
 The 'yes' choice of [`yesno` buttons](https://docassemble.org/docs/fields.html#yesno) or [`yesno` fields](https://docassemble.org/docs/fields.html#fields%20yesno) like `yesno` checkboxes and `yesnoradio`s.
 ```
       | has_hair | True | has_hair |
 ```
 
+<!-- Moved -->
 The 'maybe' choice in [yesnomaybe buttons](https://docassemble.org/docs/fields.html#yesnomaybe) and [datatype: yesnomaybe](https://docassemble.org/docs/fields.html#fields%20yesno) fields.
 ```
       | has_hair | None | has_hair |
 ```
 
+<!-- Moved -->
 Checkboxes with multiple choices. The value 'True' means to check the checkbox and 'False' means to uncheck it.
 ```
       | benefits['SSI'] | True | benefits |
 ```
 
+<!-- Moved -->
 Radio or dropdown choices.
 ```
       | favorite_color | green | favorite_color |
 ```
 
+<!-- Moved -->
 Text field or textarea. Even if the answer has multiple lines, you can only use one line. When a new line is supposed to appear, instead use `\n`. See below:
 ```
       | favorite_color | Blue.\nNo, green!\nAah... | favorite_color |
@@ -361,7 +366,7 @@ A generic object with an index variable.
       | x[i].name.first | Umi | users[1].name.first |
 ```
 
-### `.there_is_another` loop
+### `.there_is_another` loop <!-- Moved -->
 
 The `.there_is_another` loop in a story table is more complicated than you might expect.
 
@@ -378,20 +383,21 @@ The `trigger` column should have the name of the page's trigger variable, as usu
       | x.target_number | 3 | users.there_is_another |
 ```
 
-### Story Table signature
+### Story Table signature <!-- Moved -->
 
 The `value` for a row setting a signature doesn't matter. All signatures will be a single dot.
 ```
       | user.signature |  | user.signature |
 ```
 
-### Other story table notes
+### Other story table notes <!-- Moved -->
 
 Don't worry about accidentally including variables that won't show up during the test. Extra rows will be ignored.
 
 
 ## Steps
 
+<!-- Moved -->
 [Steps](https://cucumber.io/docs/gherkin/reference/#steps) must be written one after the other in the order they should happen. It's a bit more like you're the user clicking through the form. They can let you do things like download a file or make sure an user input invalidation message appears. If you change the order of the questions, even if you don't change any variable names, you may have to update these types of steps to change their order to match the new order of the screens.
 
 Note: `When`, `Then`, `And`, and `Given` at the beginning of sentences can all be used interchangeably. It doesn't matter which you use.
@@ -580,6 +586,8 @@ _Fill in fields with answers, set values, and interact with the page in other wa
 
 ---
 
+<!-- Moved -->
+
 The `continue` Step will tap the button to continue to the next page. The text on the button itself doesn't matter.
 
 ```
@@ -641,9 +649,12 @@ One special value you can use is `today`. That will insert the date on which the
 <!-- Moved -->
 Be careful with `today` math. If you're testing a "boundary" date, you want to pick a date that is well within a boundary to make the test more robust. For example, if you want to test a date that was 10 or fewer days ago, use `today - 9` instead of `today - 10`. At some point your tests might run over midnight. In that situation, if you used `10` the clock would tip into the next day - 11 days from the filled-in date. Your test would fail incorrectly. In fact, your users might have that experience, so design your interview with that in mind. For example, you can tell them the date of the deadline so they too will know about the boundary.
 
+<!-- Moved -->
 You can also use environment variables to set values with [the `secret variables` Step](#secret-variables-step), even if the value doesn't need to be secret.
 
 ---
+
+<!-- Moved -->
 
 The <span id="secret-variables-step"><code>secret variables</code> Step</span> can set variables that have sensitive information. For example, a password. The value of this variable will not appear anywhere in the report or in the console. If there is an error on this page, ALKiln will still avoid taking a picture of the screen.
 
@@ -659,6 +670,8 @@ You **MUST** use [the `log in` Step](#log-in-step) if you want to sign into your
 :::
 
 ---
+
+<!-- Moved -->
 
 Sign on a signature page. All signatures are the same - one dot.
 
@@ -704,6 +717,7 @@ Use the HTML id of the tab, but **leave out the `#` symbol** (like the example s
 
 ---
 
+<!-- Moved -->
 Use the `story table` Step to make sure the test reaches a particular screen given a set of fields with their values. See more details in [sections above](#story-tables).
 
 ```
@@ -712,6 +726,7 @@ Use the `story table` Step to make sure the test reaches a particular screen giv
 
 ---
 
+<!-- Moved -->
 The `name` Step is specifically for the Document Assembly Line 4-part name questions.
 
 Avoid punctuation. We recommend you just use 2 names - the first name and last name - but you can have all these formats:
@@ -726,6 +741,7 @@ Avoid punctuation. We recommend you just use 2 names - the first name and last n
 
 ---
 
+<!-- Moved -->
 The `address` Step is specifically for the Document Assembly Line 4-part address questions.
 
 It allows a US address format, but can otherwise be any address you want that matches the format of the example below. Remember the commas.
@@ -760,7 +776,7 @@ This will compare all of the text in the baseline PDF with all of the text in th
 
 ---
 
-
+<!-- Moved -->
 Use the `upload` step to upload one or more files. You must store files that you plan to upload in your ["Sources" folder](https://docassemble.org/docs/playground.html#sources) along with your tests.
 
 As you can see in the examples, if you want to upload more than one file you must separate their names with a comma.
