--- a/docs/alkiln/troubleshooting.mdx
+++ b/docs/alkiln/troubleshooting.mdx
@@ -107,3 +107,10 @@ Same var or vars set over and over again and never stop.
 A page that has no invalidation message and yet is unable to move on.
  -->
 
+<!--
+## Timing out
+
+1. Could need more time for Steps to run, pages to load, documents to upload or download, etc. Increase the time you give those to happen by using the ["max seconds"](writing_tests.mdx#custom-timeout) Step.
+1. Server reloading
+1. Something went wrong with the library ALKiln is using and it got disconnected somehow.
+ -->
